2006-03-01 Mikhail Khodjaiants
	Select the first available command factory when a new launch configuration is created.
	* StandardGDBDebuggerPage.java

2006-02-08 Mikhail Khodjaiants
	Bug 114793: Add an extension point to contribute command factories.
	GDBServerDebuggerPage should extend StandardGDBDebuggerPage.
	* GDBServerDebuggerPage.java
	
2006-02-06 Mikhail Khodjaiants
	Bug 114793: Add an extension point to contribute command factories.
	* MIUIMessages.properties
	+ StandardGDBDebuggerPage.java
	* plugin.xml

2006-02-03 Mikhail Khodjaiants
	The "ICDebuggerPage" interface and "AbstractCDebuggerPage" class are added.
	All extensions of the "CDebuggerPage" extension point must implement "ICDebuggerPage".
	* GDBDebuggerPage.java

2005-12-27 Mikhail Khodjaiants
	Cleanup.
	* MIUIPlugin.java

2005-12-27 Mikhail Khodjaiants
	Bug 109526: Support Eclipse-LazyStart and deprecate Eclipse-AutoStart.
	* MANIFEST.MF

2005-12-20 Mikhail Khodjaiants
	Bug 120390: Avoiding .gdbinit
	* GDBDebuggerPage.java

2005-09-06 Mikhail Khodjaiants
	Cleanup: replaced "new Boolean" by the static Boolean objects (Java 1.4).
	* GDBSolibBlock.java

2005-09-06 Mikhail Khodjaiants
	Bug 108636: mi level selection option should be moved to the gdb page.
	* MIUIMessages.properties
	* GDBDebuggerPage.java

2005-09-02 Mikhail Khodjaiants
	Bug 108723: Create a separate tab for gdb server's conection options.
	* GDBDebuggerPage.java
	* GDBServerDebuggerPage.java
	* MIUIMessages.properties
	* SerialPortSettingsBlock.java
	* TCPSettingsBlock.java
	* SolibSearchPathBlock.java

2005-07-22 Alain Magloire
	Fix the copyright.

2005-04-13 Alain Magloire
	Fix PR 91002
	* src/org/eclipse/cdt/debug/mi/internal/preferences/MIPreferencePage.java

2005-04-07 Mikhail Khodjaiants
	Removed unused icons.
	- icons/full/clcl16/auto_solib_co.gif
	- icons/full/dlcl16/auto_solib_co.gif
	- icons/full/elcl16/auto_solib_co.gif

2005-03-09 Mikhail Khodjaiants